--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -115,9 +115,9 @@
                 <!--<xpath expr="//form[1]/header[1]/button[@name='290'][2]" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
                 </xpath>-->
-                <xpath expr="//form[1]/header[1]/button[@name='290'][1]" position="attributes">
+                <!--<xpath expr="//form[1]/header[1]/button[@name='290'][1]" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
-                </xpath>
+                </xpath>-->
 
             </field>
         </record>
