--- a/qs_pers_inv/views/security.xml
+++ b/qs_pers_inv/views/security.xml
@@ -137,5 +137,31 @@
             <field name="sequence" eval="False"/>
             <field name="web_icon" eval="False"/>
         </record>
+        <!--<record id="stock.stock_rapport_de_stock" model="ir.ui.menu">
+            <field name="action" ref="stock.action_view_quants"/>
+            <field name="active" eval="True"/>
+            <field name="groups_id" eval="[(6, 0, [])]"/>
+            <field name="name">Rapport de Stock</field>
+            <field name="parent_id" ref="stock.menu_stock_root"/>
+            <field name="sequence">2</field>
+            <field name="web_icon" eval="False"/>
+        </record>
+        <record id="stock.action_view_inventory_tree" model="ir.actions.server">
+            <field name="binding_model_id" eval="False"/>
+            <field name="binding_type">action</field>
+            <field name="binding_view_types">list,form</field>
+            <field name="child_ids" eval="[(6, 0, [])]"/>
+            <field name="code"><![CDATA[
+            action = model.action_view_inventory()
+                ]]>
+            </field>
+            <field name="crud_model_id" eval="False"/>
+            <field name="help" eval="False"/>
+            <field name="link_field_id" eval="False"/>
+            <field name="model_id" ref="stock.model_stock_quant"/>
+            <field name="name">Rapport de Stock</field>
+            <field name="sequence">5</field>
+            <field name="state">code</field>
+        </record>-->
     </data>
 </odoo>
