--- a/pos_report_session_summary/views/report_session_summary.xml
+++ b/pos_report_session_summary/views/report_session_summary.xml
@@ -82,8 +82,12 @@
 
                             </strong>
                         </h4>
-                        <div><span t-out="o.cash_register_balance_end_real - o.cash_register_balance_start"/><span
-                                t-field="o.currency_id.name"/></div>
+                        <div><span t-out="o.cash_register_balance_end_real - o.cash_register_balance_start"
+                                   t-options='{"widget": "float", "precision":0}'/>
+                            <span
+                                    t-field="o.currency_id.name"
+                            />
+                        </div>
 
 
                         <t t-foreach="o.payment_method_ids" t-as="methode_de_payment">
@@ -192,7 +196,7 @@
                                                     </t>
                                                 </td>
 
-                                                <td class="text-right">
+                                                <td class="text-left" style="width: 15%">
                                                     <t t-set="discount" t-value="0"/>
 
                                                     <t t-foreach="statement.lines" t-as="value">
@@ -282,20 +286,21 @@
                             </thead>
                             <tbody>
                                 <tr t-foreach="o.order_ids" t-as="statement">
-                                    <t t-set="credit" t-value="False"/>
+                                    <t t-set="check_remise" t-value="False"/>
+                                    <t t-foreach="statement.lines" t-as="value">
 
-                                    <t t-foreach="statement.payment_ids" t-as="value">
-
-                                        <t t-foreach="statement.lines" t-as="value">
-
-                                            <t t-if="value.full_product_name == 'Remise'">
-                                                <t t-set="credit" t-value="True"/>
-                                            </t>
+                                        <t t-if="value.full_product_name == 'Remise'">
+                                            <t t-set="check_remise" t-value="True"/>
                                         </t>
-
-
                                     </t>
-                                    <t t-if="credit">
+
+                                    <!--<t t-foreach="statement.payment_ids" t-as="value">
+
+
+
+
+                                    </t>-->
+                                    <t t-if="check_remise">
                                         <td>
                                             <span t-field="statement.name"/>
                                         </td>
@@ -342,7 +347,7 @@
                                             </t>
                                         </td>
 
-                                        <td class="text-right">
+                                        <td class="text-left" style="width: 15%">
                                             <t t-set="discount" t-value="0"/>
 
                                             <t t-foreach="statement.lines" t-as="value">
